added planar segmentation

--- a/src/my_pcl_tutorial/CMakeLists.txt
+++ b/src/my_pcl_tutorial/CMakeLists.txt
@@ -106,6 +106,7 @@ include_directories(
 ## Declare a cpp executable
 # add_executable(my_pcl_tutorial_node src/my_pcl_tutorial_node.cpp)
 add_executable(voxelfilter src/voxelfilter.cpp)
+add_executable(planarsegmentation src/planarsegmentation.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
@@ -113,6 +114,9 @@ add_executable(voxelfilter src/voxelfilter.cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(voxelfilter
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(planarsegmentation
   ${catkin_LIBRARIES}
 )
 
