--- a/src/beginner_tutorials/CMakeLists.txt
+++ b/src/beginner_tutorials/CMakeLists.txt
@@ -160,3 +160,12 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+# --------------------------------------------------
+# Adding a listener
+# --------------------------------------------------
+add_executable(listener src/listener.cpp)
+target_link_libraries(listener ${catkin_LIBRARIES})
+
+# makes sure headers of these files are generated before being used
+add_dependencies(listener beginner_tutorials_generate_messages_cpp) 
